fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,7 @@ section {
     height: 100%;
   }
 }
+
+h1 {
+  margin-top: 10px;
+}
